--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "svix": "^1.37.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
